@@ -1,3 +1,8 @@
+2008-01-25 Andreas Schmitz <schmitz@lat-lon.de>
+      src/com/vividsolutions/wms/WMService.java,
+      src/com/vividsolutions/jump/workbench/ui/plugin/wms/URLWizardPanel.java:
+      Made the previous WMS changes more backwards compatible.
+
 2008-01-23 Andreas Schmitz <schmitz@lat-lon.de>
       src/com/vividsolutions/wms/WMService.java,
       src/com/vividsolutions/wms/MapRequest.java,
